--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,9 +4,12 @@ server.port=9092
 server.error.include-stacktrace=ALWAYS
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/medtrack
-spring.datasource.username=postgres
-spring.datasource.password=canary600
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.jpa.show-sql=true
 
 spring.sql.init.mode=never
