start setting up alerts

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
 			<version>1.7.0</version>
 		</dependency>
 
+			<!-- Other dependencies -->
+
+			<!-- Additional dependencies if required -->
+
+
 
 
 
