--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,8 +12,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.show-sql=true
 
-spring.sql.init.mode=never
-spring.sql.init.data-locations=classpath:schema.sql
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.data.jpa=DEBUG
 
